--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,12 @@ deploy:
   keep-history: true
   on:
     branch: master
+  language: node_js
+  node_js:
+    - "8.11.3"
+  before_install:
+    - npm install grunt-cli -g
+  install:
+    - npm install
+  before_script:
+    - grunt build
