--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 deploy:
-  provider: pages
-  skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  skip-cleanup: true
   keep-history: true
   on:
     branch: master
   language: node_js
   node_js:
     - "8.11.3"
-  before_install:
-    - npm install grunt-cli -g
   install:
+    - npm install grunt-cli -g
     - npm install
-  before_script:
+  script:
     - grunt build
