--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+os: windows
 language: node_js
 node_js:
   - "8.11.3"
 
 before_install:
-  - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/registry/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
-  - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
+  - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/registry/:_authToken=%VSTS_NPM_TOKEN%" >> .npmrc
+  - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/:_authToken=%VSTS_NPM_TOKEN%" >> .npmrc
 
 install:
   - npm install grunt-cli -g
@@ -15,7 +16,7 @@ script:
 
 deploy:
   provider: pages
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  github-token: %GITHUB_TOKEN%  # Set in the settings page of your repository, as a secure variable
   skip-cleanup: true
   keep-history: true
   local_dir: .out
