--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 
 deploy:
   provider: pages
-  github-token: %GITHUB_TOKEN%  # Set in the settings page of your repository, as a secure variable
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   skip-cleanup: true
   keep-history: true
   local_dir: .out
