--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ node_js:
 before_install:
   - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/registry/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
   - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
-  - head .npmrc
 
 install:
   - npm install grunt-cli -g
@@ -21,4 +20,4 @@ deploy:
   keep-history: true
   local_dir: .out
   on:
-    branch: master
+    branch: www-flyingclub-port
