--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,18 @@ stages:
   - build
   - deploy
 
+before_install:
+  - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/registry/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
+  - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
+
+install:
+  - npm install grunt-cli -g
+  - npm install
+
 jobs:
   include:
     - stage: build
-      before_install:
-        - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/registry/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
-        - echo "//mechavian.pkgs.visualstudio.com/_packaging/mechavian/npm/:_authToken=$VSTS_NPM_TOKEN" >> .npmrc
-      install:
-        - npm install grunt-cli -g
-        - npm install
-      script:
-        - grunt build
+      script: grunt build
 
     - stage: deploy
       deploy:
