testing travis with conditional stages and updating versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,12 @@ install:
 jobs:
   include:
     - stage: build
-      script: grunt build
+      script: grunt release
+      if: branch != master
+
+    - stage: build (master)
+      script: grunt release
+      if: branch = master
 
     - stage: deploy
       deploy:
